8145092: Use Unified Logging for the GC logging
JEP-271

Reviewed-by: sjohanss, brutisso